--- a/1stsite.html
+++ b/1stsite.html
@@ -58,7 +58,7 @@
       var message = document.getElementById("message");
 
       if (password === "hello") {
-        window.location.href = "http://127.0.0.1:5500/2ndsite.html"; // URL to redirect
+        window.location.href = "http://127.0.0.1:5500/2ndsite_revised.html"; // URL to redirect
       } else {
         message.textContent = "Incorrect password. Try again.";
       }
