--- a/edits/3rdsite_revised.html
+++ b/edits/3rdsite_revised.html
@@ -119,7 +119,7 @@
   
   <div class="container">
     <h2>Enter Password</h2>
-    <input type="password" id="password" placeholder="Enter password"><!--Password=next-->
+    <input type="password" id="password" placeholder="Enter password">
     <br>
     <button onclick="checkPassword()">Submit</button>
     <p id="message"></p>
