--- a/team1(1).html
+++ b/team1(1).html
@@ -165,7 +165,7 @@
       var accessText = document.getElementById("access-text");
 
       if (password === "insect") {
-        window.location.href = "http://127.0.0.1:5500/team1(2).html"; 
+        window.location.href = "/team1(2).html"; 
       } else {
         attempts++;
         message.style.opacity = '1';
