--- a/team1(2).html
+++ b/team1(2).html
@@ -87,7 +87,7 @@
 
   <div class="bottom-link">
 
-    <a href="http://127.0.0.1:5500/team1(3).html" target="_blank">Next link</a>
+    <a href="/team1(3).html" target="_blank">Next link</a>
   </div>
 
   <script>
