--- a/team3(1).html
+++ b/team3(1).html
@@ -165,7 +165,7 @@
       var accessText = document.getElementById("access-text");
 
       if (password === "reptile") {
-        window.location.href = "http://127.0.0.1:5500/team3(2).html"; 
+        window.location.href = "/team3(2).html"; 
       } else {
         attempts++;
         message.style.opacity = '1';
