--- a/team4(1).html
+++ b/team4(1).html
@@ -165,7 +165,7 @@
       var accessText = document.getElementById("access-text");
 
       if (password === "amphibian") {
-        window.location.href = "http://127.0.0.1:5500/team4(2).html"; 
+        window.location.href = "/team4(2).html"; 
       } else {
         attempts++;
         message.style.opacity = '1';
