--- a/team4(2).html
+++ b/team4(2).html
@@ -87,7 +87,7 @@
 
   <div class="bottom-link">
 
-    <a href="http://127.0.0.1:5500/team4(3).html" target="_blank">Next link</a>
+    <a href="/team4(3).html" target="_blank">Next link</a>
   </div>
 
   <script>
