--- a/team5(1).html
+++ b/team5(1).html
@@ -165,7 +165,7 @@
       var accessText = document.getElementById("access-text");
 
       if (password === "octopus") {
-        window.location.href = "http://127.0.0.1:5500/team5(2).html"; 
+        window.location.href = "/team5(2).html"; 
       } else {
         attempts++;
         message.style.opacity = '1';
