--- a/team2(3).html
+++ b/team2(3).html
@@ -132,7 +132,7 @@
       var message = document.getElementById("message");
 
       if (password === "enter") {
-        window.location.href = "https://www.google.com"; 
+        window.location.href = "/team2(4).html"; 
       } else {
         message.textContent = "Incorrect password. Try again.";
         message.classList.add('show');
